feat: changed the api application to handle signup and signin with cognito and the swagger page
