# api/internal/adapters/inbound/http/router.go
@@ -2,7 +2,7 @@ package http
 
 import "net/http"
 
-func NewRouter(resourceHandler *ResourceHandler, healthHandler *HealthHandler) http.Handler {
+func NewRouter(resourceHandler *ResourceHandler, healthHandler *HealthHandler, authHandler *AuthHandler) http.Handler {
 	mux := http.NewServeMux()
 
 	// Handle POST /provision
@@ -10,6 +10,12 @@ func NewRouter(resourceHandler *ResourceHandler, healthHandler *HealthHandler) h
 
 	// Handle GET /health
 	mux.HandleFunc("GET /health", healthHandler.HealthCheck)
+
+	// Handle POST /auth/signup
+	mux.HandleFunc("POST /auth/signup", authHandler.SignUp)
+
+	// Handle POST /auth/signin
+	mux.HandleFunc("POST /auth/signin", authHandler.SignIn)
 
 	return mux
 }
